Making new directory for the sortig and filtering commands